@@ -3,8 +3,9 @@ Initial Release:  Monday, Oct 12 2011
 Supported Presently
 
 Changelog for LedgerSMB 1.3.2
-* Fixed a few files where suExec fixes were not applied
-* Fixed erroneous buttons marked "Save and Post" showing up
+* Fixed a few files where suExec fixes were not applied (Chris T)
+* Fixed erroneous buttons marked "Save and Post" showing up (Chris T)
+* Corrected test cases so they do not fail w/o optional LaTeX mods (Chris T)
 
 Changelog for LedgerSMB 1.3.1
 * Language selection for invoice templates fixed (Chris T)
